--- a/style.css
+++ b/style.css
@@ -3,5 +3,5 @@
  * Author:      Евгений Коваленко
  * Description: Шаблон для поликлиники №4 города Ростов-на-Дону
  * Text Domain: policlinic
- * Version:     Версия темы. Пример: 1.0
+ * Version:     1.0
  */
