--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,7 @@ hr {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  gap: 40px;
 }
 
 .list-links {
@@ -115,6 +116,8 @@ hr {
       -ms-flex-align: center;
           align-items: center;
   color: #055D65;
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
 
 .menutop__icon {
@@ -125,6 +128,22 @@ hr {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 21px;
+}
+.menutop__icon li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+img {
+  height: 15px;
+  width: 15px;
 }
 
 .contacts__container {
