--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -69,9 +69,25 @@ img {
 
 }
 
+.header__menubottom {
+background-color: $blue2;
+}
+
 .menubottom__list {
     display: flex;
+    gap: 64px;
 
 }
 
+.menubottom_links {
+font-family: 'Open Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 22px;
+display: flex;
+align-items: center;
+
+color: #FFFFFF;
+}
 @import "adaptive";
