--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -3,35 +3,35 @@
 @import "all";
 
 .header_top {
-  background-color: $light-blue;
-  .header_wrapper {
-    margin: 0 auto;
-    max-width: 1200px;
-    .header_top_menu {
-        display: flex;
-        justify-content: space-between;
-        .menu_list {
-            display: flex;
-            gap: 40px;
-            .menu-item {
-                margin-top: 12px;
-                margin-bottom: 12px;
-                .menu_link {
-                    font-family: $font_opensans;
-                    font-style: normal;
-                    font-weight: 600;
-                    font-size: 12px;
-                    line-height: 16px;
+            background-color: $light-blue;
+            .header_wrapper {
+                margin: 0 auto;
+                max-width: 1200px;
+                .header_top_menu {
                     display: flex;
-                    align-items: center;
-                    color: $font-blue;
+                    justify-content: space-between;
+                    .menu_list {
+                        display: flex;
+                        gap: 40px;
+                        .menu-item {
+                            margin-top: 12px;
+                            margin-bottom: 12px;
+                            span {
+                                font-family: $font_opensans;
+                                font-style: normal;
+                                font-weight: 600;
+                                font-size: 12px;
+                                line-height: 16px;
+                                display: flex;
+                                align-items: center;
+                                color: $font-blue;
 
+                            }
+                        }
+                    }
                 }
-            }
-        }
-    }
 
-  }
+            }
 }
 
 
@@ -80,7 +80,30 @@
         max-width: 1200px;
         .site_identification {
             display: flex; 
-
+            justify-content: space-between;
+            align-items: center;
+            .logo_text-link {
+                font-family: $font_opensans;
+                font-style: normal;
+                font-weight: 700;
+                font-size: 21px;
+                line-height: 29px;
+                display: flex;
+                align-items: center;
+                color: $red;
+            }
+            .header_phone-link, .visually_impaired-link {
+                font-family: $font_opensans;
+                font-style: normal;
+                font-weight: 700;
+                font-size: 21px;
+                line-height: 29px;
+                display: flex;
+                align-items: center;
+                text-transform: uppercase;
+                color: $red;
+            }
+            
         }
     }
 }
@@ -95,44 +118,32 @@ background-color: $blue2;
         .header_bottom_menu {
             
             .menu_list {
-            display: flex;
-            gap: 60px;
-            justify-content: space-between;
-               .menu-item {
-                margin-top: 18px;
-                margin-bottom: 18px;
-                 .menu_link {
-                    font-family: $font_opensans;
-                    font-style: normal;
-                    font-weight: 700;
-                    font-size: 16px;
-                    line-height: 22px;
-                    display: flex;
-                    align-items: center;
-                    color: $white;
-                 }
-               }
-
+                 
+                margin-top: 0px;
+                margin-bottom: 0px;
+                display: flex;
+                gap: 60px;
+                justify-content: space-between;
+           
+                        .menu-item {
+                            margin-top: 18px;
+                            margin-bottom: 18px;
+                            span {
+                                font-family: $font_opensans;
+                                font-style: normal;
+                                font-weight: 700;
+                                font-size: 16px;
+                                line-height: 22px;
+                                display: flex;
+                                align-items: center;
+                                color: $white;
+                            }
+                        }
+                
             }
         }
     }
 }
 
-.menubottom__list {
-    display: flex;
-    gap: 64px;
 
-}
-
-.menubottom_links {
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 22px;
-display: flex;
-align-items: center;
-
-color: $white;
-}
 @import "adaptive";
