--- a/static/css/_all.scss
+++ b/static/css/_all.scss
@@ -4,7 +4,8 @@ $font-blue: #055D65;
 $blue2: #45A6AF;
 $white: #ffffff;
 $red: #E80B8B;
-
+$blue3: #03646D;
+$blue4:  #BBDFE3;
 
 
 $font_opensans: 'Open Sans';
