--- a/static/css/_all.scss
+++ b/static/css/_all.scss
@@ -1,11 +1,11 @@
 $blue: #0400ff;
-$light-blue: #E5F2F4;
-$font-blue: #055D65;
-$blue2: #45A6AF;
+$light_blue: #E5F2F4;
+$font_blue: #055D65;
+$header_bg: #45A6AF;
 $white: #ffffff;
 $red: #E80B8B;
-$blue3: #03646D;
-$blue4:  #BBDFE3;
+$footer_bg: #03646D;
+$footer_text:  #BBDFE3;
 
 
-$font_opensans: 'Open Sans';
+$font_opensans: 'OpenSans';
