--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -8,7 +8,7 @@ body {
     justify-content: space-between;
 }
 .header_top {
-            background-color: $light-blue;
+            background-color: $light_blue;
             .header_wrapper {
                 margin: 0 auto;
                 max-width: 1200px;
@@ -29,7 +29,7 @@ body {
                                 line-height: 16px;
                                 display: flex;
                                 align-items: center;
-                                color: $font-blue;
+                                color: $font_blue;
 
                             }
                         }
@@ -116,7 +116,7 @@ body {
 
 
 .header_bottom {
-background-color: $blue2;
+background-color: $header_bg;
     .header_wrapper {
         margin: 0 auto;
         max-width: 1200px;
@@ -151,7 +151,7 @@ background-color: $blue2;
 }
 
 .footer {
-    background-color: $blue3;
+    background-color: $footer_bg;
     .footer_wrapper {
         margin: 0 auto;
         max-width: 1200px;
@@ -193,7 +193,7 @@ background-color: $blue2;
                     font-size: 18px;
                     line-height: 25px;
                     /* identical to box height */
-                    color: $blue4;
+                    color: $footer_text;
                 }
             }
         }
