--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -12,6 +12,8 @@ body {
             .header_wrapper {
                 margin: 0 auto;
                 max-width: 1200px;
+                display: flex;
+                justify-content: space-between;
                 .header_top_menu {
                     display: flex;
                     justify-content: space-between;
@@ -33,6 +35,13 @@ body {
 
                             }
                         }
+                    }
+                }
+                .header_top_social {
+                    display: flex;
+                    gap: 20px;
+                    i {
+                        font-size: 16px;
                     }
                 }
 
@@ -152,21 +161,31 @@ background-color: $header_bg;
 
 .footer {
     background-color: $footer_bg;
-    .footer_wrapper {
+}    
+    
+.footer_wrapper {
         margin: 0 auto;
         max-width: 1200px;
         display: flex;
-        gap: 39px;
-        .footer_general {
+        // gap: 39px;
+}        
+        
+.footer_general {
             display: flex;
+            flex-direction: row;
             gap: 8px;
             //align-items: center;
+             min-width: 40%;
             .logo_img {
-                //margin-top: 60px;
-                //margin-bottom: 60px;
+                display: flex;
+                margin-top: 60px;
+                margin-bottom: 60px;
                 //width: 100%;
             }
-            .logo_text-link {
+            .logo_text {
+                   display: flex;
+                   align-items: center;
+                .logo_text-link {
                 font-family: $font_opensans;
                 font-style: normal;
                 font-weight: 700;
@@ -174,18 +193,31 @@ background-color: $header_bg;
                 line-height: 29px;
                 /* identical to box height */
                 color: $red;
-                //display: flex;
-                //align-items: center;
+                // display: flex;
+                // align-items: center;
+                // display: inline-block;
+                }
             }
-        }
-        .footer_menu {
-            display: flex;
-            flex-wrap: wrap;
-            .menu_list {
+}
+.footer_menu {
+             display: flex;
+             align-items: center;
+            // flex-wrap: wrap;
+
+
+.menu_list {
                 display: flex;
-                gap: 40px;
+                gap: 30px;
                 flex-wrap: wrap;
-                justify-content: flex-end;
+                // justify-content: flex-end;
+                // :nth-child(odd) {margin-right: 7px;
+                // }
+
+
+
+                // :not(:last-child) {
+                //     margin-right: 40px;
+                // }
                 span {
                     font-family: $font_opensans;
                     font-style: normal;
@@ -194,13 +226,21 @@ background-color: $header_bg;
                     line-height: 25px;
                     /* identical to box height */
                     color: $footer_text;
+                
                 }
             }
+.menu_list:not(:last-child) {
+         margin-right: 40px;
+
+
+// :nth-child(odd) {
+//                 margin-right: 10px;
+//               }
+
+            }
+    
         }
 
-    }
-
-}
 
 
 
