begin main block

--- a/static/css/_all.scss
+++ b/static/css/_all.scss
@@ -6,6 +6,7 @@ $white: #ffffff;
 $red: #E80B8B;
 $footer_bg: #03646D;
 $footer_text:  #BBDFE3;
+$header_social: #055D65;
 
 
 $font_opensans: 'OpenSans';
