--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -9,7 +9,7 @@ body {
 }
 .header_top {
             background-color: $light_blue;
-            .header_wrapper {
+            .header_container {
                 margin: 0 auto;
                 max-width: 1200px;
                 display: flex;
@@ -40,8 +40,10 @@ body {
                 .header_top_social {
                     display: flex;
                     gap: 20px;
+                    align-items: center;
                     i {
                         font-size: 16px;
+                        color: $header_social;
                     }
                 }
 
@@ -89,7 +91,7 @@ body {
 // }
 
 .header_middle {
-    .header_wrapper {
+    .header_container {
         margin: 0 auto;
         max-width: 1200px;
         .site_identification {
@@ -105,6 +107,19 @@ body {
                 display: flex;
                 align-items: center;
                 color: $red;
+            }
+            .header_phone {
+                display: flex;
+                gap: 4px;
+                i {
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 21px;
+                    color: $red;
+                    display: flex;
+                    align-items: center;
+
+                }
             }
             .header_phone-link, .visually_impaired-link {
                 font-family: $font_opensans;
@@ -126,7 +141,7 @@ body {
 
 .header_bottom {
 background-color: $header_bg;
-    .header_wrapper {
+    .header_container {
         margin: 0 auto;
         max-width: 1200px;
         .header_bottom_menu {
@@ -163,7 +178,7 @@ background-color: $header_bg;
     background-color: $footer_bg;
 }    
     
-.footer_wrapper {
+.footer_container {
         margin: 0 auto;
         max-width: 1200px;
         display: flex;
@@ -241,9 +256,16 @@ background-color: $header_bg;
     
         }
 
+// ----Main-----------------------
+.slider {
+    border: 1px solid black;
+}
 
-
-
+.departmens_container {
+        margin: 0 auto;
+        max-width: 1200px;
+        display: flex;
+}
 
 
 
