--- a/static/css/style.css
+++ b/static/css/style.css
@@ -368,4 +368,14 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.departmens_container .departmens_body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 100px;
 }/*# sourceMappingURL=style.css.map */
